--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "amqplib": "~0.1.3",
     "amqpworkers": "0.0.3",
-    "commander": "~2.1.0"
+    "commander": "~2.1.0",
+    "debug": "~0.7.4"
   }
 }
