--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "amqpworkers": "0.0.3",
     "commander": "~2.1.0",
     "debug": "~0.7.4",
-    "promise": "~4.0.0"
+    "promise": "~4.0.0",
+    "aws-sdk": "2.0.0-rc10"
   }
 }
