--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "~2.1.0",
     "debug": "~0.7.4",
     "promise": "~4.0.0",
-    "aws-sdk": "2.0.0-rc10"
+    "aws-sdk": "2.0.0-rc10",
+    "tmp": "0.0.23"
   }
 }
